--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,11 +18,8 @@ jobs:
             # - run: flutter test
             - name: start emulator headless
               shell: bash
-              run: |
-                sudo rm /var/lib/apt/lists/lock
-                sudo su      
-                apt-get update
-                apt-get install procps lsof curl unzip zip libglu1 libx11-6 nxagent wget pulseaudio libnss3 lsb-release -y && apt-get clean all
+              run: |      
+                sudo apt-get install procps lsof curl unzip zip libglu1 libx11-6 nxagent wget pulseaudio libnss3 lsb-release -y && apt-get clean all
                 curl -s "https://get.sdkman.io" | bash
                 source "$HOME/.sdkman/bin/sdkman-init.sh"
                 sdk install java 8.0.322-zulu
