--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,20 +5,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            # - uses: subosito/flutter-action@v1
-            #   with:
-            #       flutter-version: '2.10.1'
-            #       channel: 'stable'
-            # - run: flutter pub get
-            # - run: flutter pub run build_runner build
-            # - run: flutter analyze
-            # - run: flutter test
+            - name: set up JDK 1.8
+              uses: actions/setup-java@v1
+              with:
+                java-version: 1.8
             - name: start emulator headless
               shell: bash
               run: |      
-                curl -s "https://get.sdkman.io" | bash
-                source "$HOME/.sdkman/bin/sdkman-init.sh"
-                sdk install java 8.0.322-zulu
                 cd ~ && wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
                 ANDROID_HOME=/opt/androidsdk
                 mkdir -p $ANDROID_HOME
