--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,10 +23,11 @@ jobs:
                 export ANDROID_HOME=$ANDROID_HOME
                 export SDK=$ANDROID_HOME
                 export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$SDK/platform-tools:$PATH
-                less ~/.bashrc
-                echo "Android Home" 
-                ls $ANDROID_HOME
-                ls $SDK/tools
-                ls $SDK/tools/bin
-                sdkmanager
+                yes | sdkmanager --licenses || if [ $? -ne '141' ]; then exit $?; fi;
+                mkdir -p /root/.android && touch /root/.android/repositories.cfg
+                echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
+                sdkmanager "platform-tools" "platforms;android-28" "emulator"
+                echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
+                sdkmanager "system-images;android-28;google_apis;x86_64"
+ 
                 
