--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,29 +5,15 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: set up JDK 1.8
+            - name: Set up JDK 1.8
               uses: actions/setup-java@v1
               with:
-                java-version: 1.8
+                  java-version: 1.8
+            - name: Setup Android SDK
+              uses: android-actions/setup-android@v2
             - name: start emulator headless
               shell: bash
-              run: |      
-                cd ~ && wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-                ANDROID_HOME=/opt/androidsdk
-                mkdir -p $ANDROID_HOME
-                unzip sdk-tools-linux-4333796.zip -d $ANDROID_HOME
-                echo "export ANDROID_HOME=$ANDROID_HOME" >> ~/.bashrc
-                echo 'export SDK=$ANDROID_HOME' >> ~/.bashrc
-                echo 'export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$SDK/platform-tools:$PATH' >> ~/.bashrc
-                source ~/.bashrc
-                export ANDROID_HOME=$ANDROID_HOME
-                export SDK=$ANDROID_HOME
-                export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$SDK/platform-tools:$PATH
-                yes | sdkmanager --licenses
-
-                echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
-                sdkmanager "platform-tools" "platforms;android-28" "emulator"
-                echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
-                sdkmanager "system-images;android-28;google_apis;x86_64"
+              run: |
+               echo $ANDROID_HOME                          
  
                 
