--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,5 +15,7 @@ jobs:
               shell: bash
               run: |
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
+                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
+                  emulator -version
  
                 
