--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,8 +14,19 @@ jobs:
             - name: start emulator headless
               shell: bash
               run: |
+                  echo "1"
                   ls /usr/local/lib/android/sdk/cmdline-tools/latest
+                  echo "2"
                   ls /usr/local/lib/android/sdk/cmdline-tools/latest/bin
+                  echo "3"
+                  ls /usr/local/lib/android/sdk/cmdline-tools
+                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
+                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
+                  echo "4"
+                  ls /usr/local/lib/android/sdk/cmdline-tools/latest
+                  echo "5"
+                  ls /usr/local/lib/android/sdk/cmdline-tools/latest/bin
+                  echo "6"
                   ls /usr/local/lib/android/sdk/cmdline-tools
                   
                   
