--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,7 +16,7 @@ jobs:
               run: |               
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
-                  ls /usr/local/lib/android/sdk/tools
+                  /usr/local/lib/android/sdk/tools/emulator -version
  
                   
    
