--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,7 +13,8 @@ jobs:
               uses: android-actions/setup-android@v2
             - name: start emulator headless
               shell: bash
-              run: |               
+              run: |
+                  sudo apt-get install libglu1 libx11-6 pulseaudio libnss3 -y
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
                   /usr/local/lib/android/sdk/tools/emulator -version
