--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,6 +18,10 @@ jobs:
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
                   /usr/local/lib/android/sdk/tools/emulator -version
+                  /usr/local/lib/android/sdk/platform-tools/adb start-server
+                  echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
+                  emulator -avd avd28 -no-audio -no-accel -no-window
+                  /usr/local/lib/android/sdk/platform-tools/adb devices
  
                   
    
