--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,7 +20,8 @@ jobs:
                   /usr/local/lib/android/sdk/tools/emulator -version
                   /usr/local/lib/android/sdk/platform-tools/adb start-server
                   echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                  emulator -avd avd28 -no-audio -no-accel -no-window
+                  /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
+                  sleep 500
                   /usr/local/lib/android/sdk/platform-tools/adb devices
  
                   
