--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,12 +16,14 @@ jobs:
               run: |
                   sudo apt-get update --fix-missing -y 
                   sudo apt-get install libglu1 libx11-6 pulseaudio libnss3 -y
-                  sudo apt-get install qt5-default -y
                   echo "starting installing"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
                   /usr/local/lib/android/sdk/tools/emulator -version
                   /usr/local/lib/android/sdk/platform-tools/adb start-server
+                  sudo apt-get install qt5-default
+                  sudo groupadd -r kvm
+                  sudo gpasswd -a $USER kvm
                   echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
                   /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
                   sleep 500
