--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,10 +26,11 @@ jobs:
                   sudo apt install qemu-kvm -y
                   sudo adduser $USER kvm
                   sudo gpasswd -a $USER kvm
-                  echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                  /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
-                  sleep 500
-                  /usr/local/lib/android/sdk/platform-tools/adb devices
+                  ls -al /dev/kvm
+                  grep kvm /etc/group
+                  sudo echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
+                  sudo /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
+                 
  
                   
    
