--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,7 @@ jobs:
                   sudo adduser $USER kvm
                   grep kvm /etc/group
                   echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                  /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
+                  sudo /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
   
                  
  
