--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,34 @@
 name: work
 on: [push, pull_request]
 jobs:
-    analyze-and-test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK 1.8
-              uses: actions/setup-java@v1
-              with:
-                  java-version: 1.8
-            - name: Setup Android SDK
-              uses: android-actions/setup-android@v2
-            - name: start emulator headless
-              shell: bash
-              run: |
-                  sudo apt-get update --fix-missing -y 
-                  sudo apt-get install libglu1 libx11-6 pulseaudio libnss3 qt5-default qemu-kvm libxcb-xinerama0 -y
-                  export QT_DEBUG_PLUGINS=1
-                  echo "starting installing"
-                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
-                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
-                  /usr/local/lib/android/sdk/tools/emulator -version
-                  /usr/local/lib/android/sdk/platform-tools/adb start-server
-                  sudo adduser $USER kvm
-                  grep kvm /etc/group
-                  sudo echo no | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                  sudo /usr/local/lib/android/sdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
-  
+  build:
+    runs-on: ubuntu-latest
+    env:
+      ANDROID_SDK_TOOLS: "4333796"
+      ANDROID_CMAKE: "3.10.2.4988404"
+    steps:
+    - uses: actions/checkout@v1
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Install Android sdkmanager
+      run: |
+        wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
+        sudo unzip -d $ANDROID_HOME android-sdk.zip > /dev/null
+    - name: Install required Android tools
+      run: |
+        echo "y" | sudo $ANDROID_HOME/tools/bin/sdkmanager "ndk;${ANDROID_NDK}" > /dev/null
+        
+    - name: Build with Gradle
+      run: |
+        export PATH="$ANDROID_HOME/cmake/${ANDROID_CMAKE}/bin:$PATH"
+        ./gradlew build
+    - name: install sdk
+      run: |
+        $ANDROID_HOME/tools/bin/sdkanager "emulator"
+        $ANDROID_HOME/tools/bin/sdkanager "system-images;android-16;default;armeabi-v7a"
+        $ANDROID_HOME/tools/bin/sdkanager "system-images;android-29;default;x86_64"
                  
  
                   
