--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,35 +1,37 @@
 name: work
 on: [push, pull_request]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_TOOLS: "4333796"
-      ANDROID_CMAKE: "3.10.2.4988404"
-    steps:
-    - uses: actions/checkout@v1
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Install Android sdkmanager
-      run: |
-        wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
-        sudo unzip -d $ANDROID_HOME android-sdk.zip > /dev/null
-    - name: Install required Android tools
-      run: |
-        echo "y" | sudo $ANDROID_HOME/tools/bin/sdkmanager "ndk;${ANDROID_NDK}" > /dev/null
-        
-    - name: Build with Gradle
-      run: |
-        export PATH="$ANDROID_HOME/cmake/${ANDROID_CMAKE}/bin:$PATH"
-        ./gradlew build
-    - name: install sdk
-      run: |
-        $ANDROID_HOME/tools/bin/sdkanager "emulator"
-        $ANDROID_HOME/tools/bin/sdkanager "system-images;android-16;default;armeabi-v7a"
-        $ANDROID_HOME/tools/bin/sdkanager "system-images;android-29;default;x86_64"
-                 
+    analyze-and-test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set up JDK 1.8
+              uses: actions/setup-java@v1
+              with:
+                  java-version: 1.8
+            - name: start emulator headless
+              shell: bash
+              run: |
+                cd ~ && wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
+                ANDROID_HOME=/opt/androidsdk
+                mkdir -p $ANDROID_HOME
+                unzip sdk-tools-linux-4333796.zip -d $ANDROID_HOME
+                echo "export ANDROID_HOME=$ANDROID_HOME" >> ~/.bashrc
+                echo 'export SDK=$ANDROID_HOME' >> ~/.bashrc
+                echo 'export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$PATH' >> ~/.bashrc
+                source ~/.bashrc
+                yes | sdkmanager --licenses || if [ $? -ne '141' ]; then exit $?; fi;
+                sudo mkdir -p /root/.android && touch /root/.android/repositories.cfg
+                echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
+                sdkmanager "platform-tools" "platforms;android-28" "emulator"
+                echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
+                sdkmanager "system-images;android-28;google_apis;x86_64"
+                echo "print emulator version...!"
+                emulator -version
+                adb start-server
+                echo no | avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
+                emulator -avd avd28 -no-audio -no-accel -no-window
+                adb devices
  
                   
    
