--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,18 +20,12 @@ jobs:
                 echo 'export SDK=$ANDROID_HOME' >> ~/.bashrc
                 echo 'export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$PATH' >> ~/.bashrc
                 source ~/.bashrc
-                yes | sdkmanager --licenses || if [ $? -ne '141' ]; then exit $?; fi;
+                yes | /opt/androidsdk/tools/bin/sdkmanager  --licenses || if [ $? -ne '141' ]; then exit $?; fi;
                 sudo mkdir -p /root/.android && touch /root/.android/repositories.cfg
                 echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
-                sdkmanager "platform-tools" "platforms;android-28" "emulator"
+                /opt/androidsdk/tools/bin/sdkmanager  "platform-tools" "platforms;android-28" "emulator"
                 echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
-                sdkmanager "system-images;android-28;google_apis;x86_64"
-                echo "print emulator version...!"
-                emulator -version
-                adb start-server
-                echo no | avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                emulator -avd avd28 -no-audio -no-accel -no-window
-                adb devices
+                /opt/androidsdk/tools/bin/sdkmanager  "system-images;android-28;google_apis;x86_64"
  
                   
    
