--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,7 +21,7 @@ jobs:
                 echo 'export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$PATH' >> ~/.bashrc
                 source ~/.bashrc
                 echo yes | /opt/androidsdk/tools/bin/sdkmanager  --licenses || if [ $? -ne '141' ]; then exit $?; fi;
-                sudo mkdir -p /root/.android && touch /root/.android/repositories.cfg
+                mkdir -p /root/.android && touch /root/.android/repositories.cfg
                 echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
                 /opt/androidsdk/tools/bin/sdkmanager  "platform-tools" "platforms;android-28" "emulator"
                 echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
