--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -7,6 +7,7 @@ jobs:
             - name: start emulator headless
               shell: bash
               run: |
+                sudo apt-get autoremove && sudo apt-get clean && sudo apt-get autoclean
                 sudo apt-get install procps lsof curl unzip zip libglu1 libx11-6 nxagent wget pulseaudio libnss3 lsb-release -y && apt-get clean all
                 curl -s "https://get.sdkman.io" | bash
                 source "$HOME/.sdkman/bin/sdkman-init.sh"
