--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,7 +8,7 @@ jobs:
               shell: bash
               run: |
                 sudo rm /var/cache/apt/archives/lock 
-                sudo rm /var/cache/apt/archives/
+                sudo rm -r /var/cache/apt/archives/
                 sudo rm /var/lib/apt/lists/lock 
                 sudo rm /var/cache/apt/pkgcache.bin
                 sudo rm /var/cache/apt/srcpkgcache.bin
