--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,12 +16,15 @@ jobs:
                 sdk install java 8.0.322-zulu
                 cd ~ && wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
                 ANDROID_HOME=/opt/androidsdk
-                mkdir -p $ANDROID_HOME
-                unzip sdk-tools-linux-4333796.zip -d $ANDROID_HOME
+                sudo mkdir -p $ANDROID_HOME
+                sudo unzip sdk-tools-linux-4333796.zip -d $ANDROID_HOME
                 echo "export ANDROID_HOME=$ANDROID_HOME" >> ~/.bashrc
                 echo 'export SDK=$ANDROID_HOME' >> ~/.bashrc
                 echo 'export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$SDK/platform-tools:$PATH' >> ~/.bashrc
                 source ~/.bashrc
+                less ~/.bashrc
+                export PATH=$SDK/emulator:$SDK/tools:$SDK/tools/bin:$SDK/platform-tools:$PATH
+                
                 echo yes | sdkmanager --licenses || if [ $? -ne '141' ]; then exit $?; fi;
                 mkdir -p /root/.android && touch /root/.android/repositories.cfg
                 echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
