--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,13 +29,13 @@ jobs:
                 echo "started downloading: platform-tools;platforms;android-28;emulator, please wait ...!"
                 echo yes | /opt/androidsdk/tools/bin/sdkmanager  "platform-tools" "platforms;android-28" "emulator"
                 echo "started downloading system-images;android-28;google_apis;x86_64,please wait ...!"
-                echo yes | /opt/androidsdk/tools/bin/sdkmanager  "system-images;android-28;google_apis;x86"
+                echo yes | /opt/androidsdk/tools/bin/sdkmanager  "system-images;android-28;google_apis;x86_64"
                 echo "print emulator version...!"
                 /opt/androidsdk/tools/emulator -version
                 /opt/androidsdk/platform-tools/adb start-server
                 sudo adduser $USER kvm
                 cd /opt/androidsdk/tools/
-                echo no | /opt/androidsdk/tools/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86"
+                echo no | /opt/androidsdk/tools/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
                 /opt/androidsdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
                 sleep 500
                 /opt/androidsdk/platform-tools/adb devices
