--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,6 +34,7 @@ jobs:
                 /opt/androidsdk/tools/emulator -version
                 /opt/androidsdk/platform-tools/adb start-server
                 sudo adduser $USER kvm
+                echo "############ CheckCheck"
                 grep -cw ".*\(vmx\|svm\).*" /proc/cpuinfo
                 export QT_DEBUG_PLUGINS=1
                 sudo apt-get --reinstall install libqt5dbus5 libqt5widgets5 libqt5network5 libqt5gui5 libqt5core5a libxcb-xinerama0 -y 
@@ -41,7 +42,7 @@ jobs:
                 export LD_LIBRARY_PATH="/opt/androidsdk/tools/emulator/lib64:$LD_LIBRARY_PATH"
                 export QT_QPA_PLATFORM_PLUGIN_PATH=/usr/lib/x86_64-linux-gnu/qt5/plugins
                 echo no | /opt/androidsdk/tools/bin/avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"
-                /opt/androidsdk/tools/emulator -avd avd28 -no-audio -no-accel -no-window
+                /opt/androidsdk/tools/emulator -avd avd28 -no-audio -no-boot-anim -no-window -accel on -gpu off &
                 sleep 500
                 /opt/androidsdk/platform-tools/adb devices
  
