--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Set up JDK 11
+            - name: Set up JDK_11
               uses: actions/setup-java@v1
               with:
                   java-version: 11.x
