--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,16 +1,23 @@
-name: work
+name: MDE_Test
 on: [push, pull_request]
 jobs:
     analyze-and-test:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Set up JDK_11
-              uses: actions/setup-java@v1
+            - uses: actions/setup-java@v1
               with:
-                  java-version: 11.x
+                  java-version: '11.x'
+            - uses: subosito/flutter-action@v1
+              with:
+                  flutter-version: '2.10.1'
+                  channel: 'stable'
             - name: Setup Android SDK
               uses: android-actions/setup-android@v2
+            - run: flutter pub get
+            - run: flutter pub run build_runner build
+            - run: flutter analyze
+            - run: flutter test
             - name: start emulator headless
               shell: bash
               run: |
@@ -31,6 +38,11 @@ jobs:
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   sleep 40
                   /usr/local/lib/android/sdk/platform-tools/adb devices
+            - name: start integration tests
+            - run: flutter drive test_driver/main.dart
+            - name : stop and remove the docker containers
+              shell: bash
+              run: |
                   docker container stop emulator-headless
                   docker container rm emulator-headless
 
