--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,6 +39,11 @@ jobs:
                   sleep 40
                   /usr/local/lib/android/sdk/platform-tools/adb devices
             - run: flutter drive test_driver/main.dart
+            - name : stop and remove the docker containers
+              shell: bash
+              run: |
+                  docker container stop emulator-headless
+                  docker container rm emulator-headless
  
  
                   
