--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,6 +20,7 @@ jobs:
                   sudo apt-get update --fix-missing -y 
                   sudo apt-get install libglu1 libx11-6 pulseaudio libnss3 -y
                   echo "starting installing"
+                  /usr/local/lib/android/sdk/platform-tools/adb kill-server
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-28" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-28;google_apis;x86_64"
                   docker run  --privileged -d --name emulator-headless  -p 5037:5037 -v /usr/local/lib/android/sdk:/opt/android-sdk thyrlian/android-sdk
@@ -34,10 +35,6 @@ jobs:
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   sleep 40
                   /usr/local/lib/android/sdk/platform-tools/adb devices
-            - run: flutter drive test_driver/main.dart
-            - name : stop and remove the docker containers
-              shell: bash
-              run: |
                   docker container stop emulator-headless
                   docker container rm emulator-headless
  
