--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,10 +17,7 @@ jobs:
             - name: start emulator headless
               shell: bash
               run: |
-                  ls /home/
-                  ls /home/runner/
-                  ls /home/runner/work/
-                  ls /home/runner/work/apps/
+                  ls /home/runner/work/codewars_challenges/apps/
                   sudo apt-get update --fix-missing -y 
                   sudo apt-get install libglu1 libx11-6 pulseaudio libnss3 -y
                   echo "starting installing"
@@ -39,7 +36,7 @@ jobs:
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   sleep 40
                   /usr/local/lib/android/sdk/platform-tools/adb devices
-                  /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/apps/app.apk
+                  /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/apps/app.apk
                   docker container stop emulator-headless
                   docker container rm emulator-headless
  
